disable overflow, fix nav bar margin

--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+  overflow: hidden;
+}
 .github-logo {
   background: linear-gradient(
     135deg,
